--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,9 @@ figcaption {
 }
 
 /*////////// BACKGROUNDS //////////*/
-
+.white-wood {
+  background: url(../images/white-wood.jpeg);
+}
 
 
 /*/////// MEDIA ////////*/
