--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,7 @@ figcaption {
 
 /*////////// BACKGROUNDS //////////*/
 .white-wood {
-  background: url(../images/white-wood.jpeg) no-repeat;
+  background: url(../images/white-wood.jpeg) no-repeat center top;
 }
 
 
