--- a/css/style.css
+++ b/css/style.css
@@ -40,6 +40,7 @@ figcaption {
 /*////////// BACKGROUNDS //////////*/
 .white-wood {
   background: url(../images/white-wood.jpeg) no-repeat center top;
+  background-size: cover;
 }
 
 
